@@ -2,6 +2,8 @@ Revision history for Dist::Zilla::Plugin::MinimumPerl
 
 {{$NEXT}}
 
+	Expanded the prereq specification so we now separate the configure, test, and runtime phases RT#61028 ( thanks DAGOLDEN! )
+
 1.003	2011-04-21 16:19:04 UTC
 
 	Make sure that we scan only .t and .pl/pm files ( thanks RT#67355 and DOHERTY )
